samples/_failures_safe/1761523471_ef274a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_927f1f89.c: In function ‘main’:
./samples/SAFE/__tmp_927f1f89.c:155:43: error: missing terminating " character
  155 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_927f1f89.c:155:21: error: expected declaration or statement at end of input
